metadata and formating

--- a/predicting_student_depression.ipynb
+++ b/predicting_student_depression.ipynb
@@ -1,6 +1,66 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1fc64f06-82f5-4e4e-9ca5-635557d8a3d1",
+   "metadata": {},
+   "source": [
+    "# Predicting Student Depression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1329d1ba-1348-4ee3-8a21-a1aca1973d4f",
+   "metadata": {},
+   "source": [
+    "Name : Darryn Johnson\n",
+    "\n",
+    "Date Last Updated : 3/12/2025"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2baa144a-308d-4e77-abdd-b32c17406151",
+   "metadata": {},
+   "source": [
+    "## Sources and Links\n",
+    "\n",
+    "Original Kaggle Dataset : [Student Depression Dataset](https://www.kaggle.com/datasets/hopesb/student-depression-dataset/data)\n",
+    "\n",
+    "Github Repository : [predicting_student_depression](https://github.com/Djohnson1313/predicting_student_depression)\n",
+    "\n",
+    "Dataset Metadata : \n",
+    "\n",
+    "`CHRISP-DM` explination and image : [IBM](https://www.ibm.com/docs/en/spss-modeler/saas?topic=dm-crisp-help-overview)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1be50642-0367-4066-83bd-bcbfa9129358",
+   "metadata": {},
+   "source": [
+    "# Overview\n",
+    "\n",
+    "- title\n",
+    "\n",
+    "- author information\n",
+    "\n",
+    "- sources and links\n",
+    "\n",
+    "- overview\n",
+    "\n",
+    "- imports\n",
+    "\n",
+    "- business understanding\n",
+    "\n",
+    "- data understanding\n",
+    "\n",
+    "- data distribution\n",
+    "\n",
+    "- data preparation "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "65ad8523-1e13-425e-92f5-2bbda18aa6bf",
@@ -13,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4140a2bc-ce90-45e1-92f0-c272649df1e3",
    "metadata": {},
    "outputs": [],
@@ -23,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6e88a2bd-6b18-4d4e-acaa-c67ab2187ebe",
    "metadata": {},
    "outputs": [
@@ -215,7 +275,7 @@
        "4                               No           0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f8d7130f-90dd-4acf-bd04-852676ee5e12",
    "metadata": {},
    "outputs": [
@@ -242,7 +302,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,8 +313,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2b657c71-68e5-49ff-9b07-731f30110fff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Study Satisfaction\n",
+       "4.0    6359\n",
+       "2.0    5838\n",
+       "3.0    5821\n",
+       "1.0    5451\n",
+       "5.0    4422\n",
+       "0.0      10\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Study Satisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3fe224eb-a3e4-4a9b-832d-e333f14f58d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Work Pressure\n",
+       "0.0    27898\n",
+       "5.0        2\n",
+       "2.0        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Work Pressure'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "26a8dde3-f3d5-4a5b-bdab-dd1869d22c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Academic Pressure\n",
+       "3.0    7462\n",
+       "5.0    6296\n",
+       "4.0    5155\n",
+       "1.0    4801\n",
+       "2.0    4178\n",
+       "0.0       9\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Academic Pressure'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "90c33e59-6d8f-4900-b39a-efb04c2a65db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Financial Stress\n",
+       "5.0    6715\n",
+       "4.0    5775\n",
+       "3.0    5226\n",
+       "1.0    5121\n",
+       "2.0    5061\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Financial Stress'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "30304d63-5be1-457a-bd8e-0275db794dc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Profession\n",
+       "Student                   27870\n",
+       "Architect                     8\n",
+       "Teacher                       6\n",
+       "Digital Marketer              3\n",
+       "Content Writer                2\n",
+       "Chef                          2\n",
+       "Doctor                        2\n",
+       "Pharmacist                    2\n",
+       "Civil Engineer                1\n",
+       "UX/UI Designer                1\n",
+       "Educational Consultant        1\n",
+       "Manager                       1\n",
+       "Lawyer                        1\n",
+       "Entrepreneur                  1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Profession'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc0a04ac-294f-4517-a775-2b7a7d69095d",
    "metadata": {},
    "outputs": [],
    "source": []
