data and business understanding

--- a/predicting_student_depression.ipynb
+++ b/predicting_student_depression.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "Name : Darryn Johnson\n",
     "\n",
-    "Date Last Updated : 3/12/2025"
+    "Date Last Updated : 3/19/2025"
    ]
   },
   {
@@ -55,13 +55,11 @@
     "\n",
     "- business understanding\n",
     "\n",
-    "- data understanding\n",
-    "\n",
-    "- data distribution\n",
-    "\n",
     "- data preparation\n",
     "\n",
-    "---"
+    "- data understanding\n",
+    "\n",
+    "- data distribution"
    ]
   },
   {
@@ -69,6 +67,7 @@
    "id": "3cc3a636-0434-4396-90c4-8152e4db2b59",
    "metadata": {},
    "source": [
+    "---\n",
     "## Imports"
    ]
   },
@@ -97,6 +96,157 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c11a61d0-ad38-4dac-9e05-7641d7ce871e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Profession</th>\n",
+       "      <th>Academic Pressure</th>\n",
+       "      <th>Work Pressure</th>\n",
+       "      <th>CGPA</th>\n",
+       "      <th>Study Satisfaction</th>\n",
+       "      <th>Job Satisfaction</th>\n",
+       "      <th>Sleep Duration</th>\n",
+       "      <th>Dietary Habits</th>\n",
+       "      <th>Degree</th>\n",
+       "      <th>Have you ever had suicidal thoughts ?</th>\n",
+       "      <th>Work/Study Hours</th>\n",
+       "      <th>Financial Stress</th>\n",
+       "      <th>Family History of Mental Illness</th>\n",
+       "      <th>Depression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Visakhapatnam</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.97</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5-6 hours</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>B.Pharm</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.90</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5-6 hours</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>Srinagar</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.03</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Less than 5 hours</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>BA</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  Gender   Age           City Profession  Academic Pressure  \\\n",
+       "0   2    Male  33.0  Visakhapatnam    Student                5.0   \n",
+       "1   8  Female  24.0      Bangalore    Student                2.0   \n",
+       "2  26    Male  31.0       Srinagar    Student                3.0   \n",
+       "\n",
+       "   Work Pressure  CGPA  Study Satisfaction  Job Satisfaction  \\\n",
+       "0            0.0  8.97                 2.0               0.0   \n",
+       "1            0.0  5.90                 5.0               0.0   \n",
+       "2            0.0  7.03                 5.0               0.0   \n",
+       "\n",
+       "      Sleep Duration Dietary Habits   Degree  \\\n",
+       "0          5-6 hours        Healthy  B.Pharm   \n",
+       "1          5-6 hours       Moderate      BSc   \n",
+       "2  Less than 5 hours        Healthy       BA   \n",
+       "\n",
+       "  Have you ever had suicidal thoughts ?  Work/Study Hours  Financial Stress  \\\n",
+       "0                                   Yes               3.0               1.0   \n",
+       "1                                    No               3.0               2.0   \n",
+       "2                                    No               9.0               1.0   \n",
+       "\n",
+       "  Family History of Mental Illness  Depression  \n",
+       "0                               No           1  \n",
+       "1                              Yes           0  \n",
+       "2                              Yes           0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cd5713cb-a62e-40e8-99fc-d415aa1952cc",
    "metadata": {},
@@ -106,10 +256,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "33f63646-e6de-43b9-9b10-0249e30ce682",
+   "metadata": {},
+   "source": [
+    "The purpose of the following notebook is to look into the factors that could lead to a student being depressed, and create a model to predict whether or not a specifc individual is likely to be depressed. This model is intedned for use by therapists or school faculty to automate the beginning phase of working with a student that is depressed.\n",
+    "\n",
+    "- business objectives\n",
+    "    - create a model that accuratly predcits if an individual is depressed.\n",
+    "- situation assesment\n",
+    "    - resources available\n",
+    "        - data regarding the specifc student\n",
+    "    - resources unavailable\n",
+    "        - wheather the target variable is decided by a physician or is self diagnosed\n",
+    "        - the original dataset owner mentions the data is synthetic, but the above statement still holds value in a real dataset\n",
+    "        - nationality\n",
+    "- data mining goals\n",
+    "    - assess and understand the data provided\n",
+    "- project plan\n",
+    "    - clean the data and remove unnecessary datapoints\n",
+    "    - analyize the data to ensure a thorough understanding\n",
+    "    - prep data for modeling\n",
+    "    - model the data\n",
+    "        - rework data and the model if needed to ensure high quality\n",
+    "        - run model again and repeat until satisfactory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b03d701c-affa-436f-b14e-e726ef2fc25e",
    "metadata": {},
    "source": [
     "# Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7b0fd76-3a3e-45f5-9858-a293b50d35aa",
+   "metadata": {},
+   "source": [
+    "The purpose of the following cells is to prep the data for EDA. This section will not enclude data manipulation for the actual modeling itself; that will take place in the model preparation section. "
    ]
   },
   {
@@ -125,13 +310,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "c3ccc565-92c1-4707-8df5-545c730deb3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# this line of code removes entries that are not students, as non-student entries are a very small minority\n",
     "df = df[df['Profession'] == 'Student']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "021ee6c1-6b6c-4ea9-803a-0e5deea15154",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Data Understanding "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07a7b96-beb4-41fb-8be8-dfa7ee66817d",
+   "metadata": {},
+   "source": [
+    "This data was dowloaded from [Kaggle](https://www.kaggle.com/) and is a sythetic datast created by the author. The data is as follows :\n",
+    "\n",
+    "- data properties\n",
+    "    - the original dataset contains 27,900 rows, with each row representing an individual student\n",
+    "    - the original dataset contains 18 columns such as gender, age and degree.\n",
+    "        - the breakdown of these data points are available in [dataset_metadata.ipynb](https://github.com/Djohnson1313/predicting_student_depression/blob/main/dataset_metadata.ipynb)"
    ]
   },
   {
@@ -143,8 +350,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e29d2ef-4ee1-40c2-a195-b494c2023a94",
+   "metadata": {},
+   "source": [
+    "Let's take a quick look into the distribution of the data we will be working with. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3ea4462c-d388-47fc-be20-9b5c2bab5e84",
    "metadata": {},
    "outputs": [
@@ -175,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "54cac84d-6f01-4907-bebe-4b1530d77b74",
    "metadata": {},
    "outputs": [
@@ -201,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "ceb1613c-d916-4465-9aed-a1a2f3e44e09",
    "metadata": {},
    "outputs": [
@@ -272,22 +487,6 @@
    "source": [
     "df['Age'].value_counts().sort_index()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "021ee6c1-6b6c-4ea9-803a-0e5deea15154",
-   "metadata": {},
-   "source": [
-    "# Data Understanding "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bd13c89-c075-4cb9-b181-76b348cef9e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
