add remaining metadata

--- a/dataset_metadata.ipynb
+++ b/dataset_metadata.ipynb
@@ -39,9 +39,19 @@
     "\n",
     "- Dietary Habits: Eating habits of the individual\n",
     "\n",
+    "- degree: what degree the individual is persuing\n",
+    "\n",
+    "- suicidal thoughts: binary yes/no if individual has had suicidal thoughts\n",
+    "\n",
+    "- work/study hours: hours per day the individual works or studies\n",
+    "\n",
+    "- financial stress: scale 1-10\n",
+    "\n",
+    "- family illness: binary yes/no if indiviudals family has a history of mental illness\n",
+    "\n",
     "`Target Variable`\n",
     "\n",
-    "- Depression : yes / no"
+    "- Depression: binary yes/no if the indiviudal has depression"
    ]
   }
  ],
