--- a/predicting_student_depression.ipynb
+++ b/predicting_student_depression.ipynb
@@ -373,6 +373,7 @@
    "id": "f7b455da-652c-4553-ac7a-c75f25447318",
    "metadata": {},
    "source": [
+    "---\n",
     "# Data Distribution"
    ]
   },
@@ -417,7 +418,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
+   "id": "4c0d9f26-6bbc-4fd4-abc3-2f70453e9365",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3197"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df[df['Gender'] == 'Male']) - len(df[df['Gender'] == 'Female'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39260f1c-9365-4945-b5db-8df8064a484c",
+   "metadata": {},
+   "source": [
+    "Here we can see that thee are 3,197 more males in this dataset than females."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "54cac84d-6f01-4907-bebe-4b1530d77b74",
    "metadata": {},
    "outputs": [
@@ -447,7 +477,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
+   "id": "cf4094ae-48bd-4f40-a63c-503516164960",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1893"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_male = df[df['Gender'] == 'Male']\n",
+    "df_female = df[df['Gender'] == 'Female']\n",
+    "\n",
+    "m_dep = df_male[df_male['Depression'] == 1]\n",
+    "f_dep = df_female[df_female['Depression'] == 1]\n",
+    "\n",
+    "len(m_dep) - len(f_dep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f81a9d2-a123-448b-b346-7ec8ce4441a8",
+   "metadata": {},
+   "source": [
+    "Breaking down depression by gender, we see that males report more depression than females."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "ceb1613c-d916-4465-9aed-a1a2f3e44e09",
    "metadata": {},
    "outputs": [
@@ -485,10 +550,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fc96bfb-756d-48d9-bc92-32d8aadf4868",
+   "metadata": {},
+   "source": [
+    "Here we see our spread of ages, with the average age being 25."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b906b958-2fbb-4332-b464-be6faafee570",
    "metadata": {},
    "source": [
-    "## Functions"
+    "---\n",
+    "## Functions\n",
+    "\n",
+    "The following cells contain all of the functions used within the notebook, and will have a short breakdown of what the function does in the sections they are used in."
    ]
   },
   {
@@ -504,12 +580,15 @@
    "id": "b0ecbf43-b75d-4ea8-9321-992c4aa8dc07",
    "metadata": {},
    "source": [
-    "# Exploritory Data Analysis (EDA)"
+    "---\n",
+    "# Exploritory Data Analysis (EDA)\n",
+    "\n",
+    "Now we have seen some of the distributions of data, let's take a deeper look into some of the data and what it it means."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "6e88a2bd-6b18-4d4e-acaa-c67ab2187ebe",
    "metadata": {},
    "outputs": [
@@ -694,7 +773,7 @@
        "4               1.0               1.0             No           0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "14a21a26-ad4f-4e0b-b585-3848547d4e69",
    "metadata": {},
    "outputs": [
@@ -744,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "a9038a08-c841-4274-8d68-67232baae56e",
    "metadata": {},
    "outputs": [
@@ -758,7 +837,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "ba041c7f-475a-4706-9728-b5752ce2dfdc",
    "metadata": {},
    "outputs": [
@@ -800,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "6d517340-d829-4c12-8a8b-4e533cf91eb8",
    "metadata": {},
    "outputs": [
@@ -831,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "503eb205-51d6-45f9-ba84-2ab40345e01c",
    "metadata": {},
    "outputs": [
@@ -862,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "521a0b37-61b9-4f6f-9fe4-555202901d55",
    "metadata": {},
    "outputs": [
@@ -892,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "5b041ac0-09d1-450b-8853-895afe911b5e",
    "metadata": {},
    "outputs": [
