--- a/predicting_student_depression.ipynb
+++ b/predicting_student_depression.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "4c0d9f26-6bbc-4fd4-abc3-2f70453e9365",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "3197"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "54cac84d-6f01-4907-bebe-4b1530d77b74",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "cf4094ae-48bd-4f40-a63c-503516164960",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "1893"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ceb1613c-d916-4465-9aed-a1a2f3e44e09",
    "metadata": {},
    "outputs": [
@@ -569,11 +569,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "b43232c4-6150-494b-b1eb-0e3d29bf38be",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_avg(gender, col):\n",
+    "\n",
+    "    '''\n",
+    "    ---\n",
+    "    this function requires 2 argumets, gender(str) and what column to act upon(str)\n",
+    "    ---\n",
+    "    this function creates a df with only the given gender and column, and finds the mean of the newly created df\n",
+    "    ---\n",
+    "    example : Male, Academic Pressure\n",
+    "    ---\n",
+    "    '''\n",
+    "    \n",
+    "    gender_frame = df[df['Gender'] == gender]\n",
+    "    col_sum = sum(gender_frame[col])\n",
+    "    col_len = len(gender_frame[col])\n",
+    "\n",
+    "    avg = round((col_sum / col_len), 2)\n",
+    "    \n",
+    "    return f'the mean for {col} for {gender}s is {avg}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -588,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6e88a2bd-6b18-4d4e-acaa-c67ab2187ebe",
    "metadata": {},
    "outputs": [
@@ -773,7 +793,7 @@
        "4               1.0               1.0             No           0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "14a21a26-ad4f-4e0b-b585-3848547d4e69",
    "metadata": {},
    "outputs": [
@@ -822,33 +842,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "126c455a-5ac9-4b08-9f94-b10b70ef3dbf",
+   "metadata": {},
+   "source": [
+    "Here we can see that males have more reports then the females, however this results in a similar mean when averaged out, resulting in females having a 0.07 higher averaage academic pressure rating."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "919e5005-3419-4e84-bfbc-9fb63243962b",
+   "metadata": {},
+   "source": [
+    "Function Utilized :\n",
+    "- `get_avg`\n",
+    "    - finds the average for the given gender and column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a9038a08-c841-4274-8d68-67232baae56e",
+   "execution_count": 50,
+   "id": "073d7abf-1046-4dcf-abf8-57c63a4bdf72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Work Pressure\n",
-       "0.0    27819\n",
-       "2.0        1\n",
-       "5.0        1\n",
-       "Name: count, dtype: int64"
+       "'the mean for Academic Pressure for Males is 3.11'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Work Pressure'].value_counts()"
+    "get_avg('Male', 'Academic Pressure')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
+   "id": "af6024ab-91e0-4d5d-a46e-3dd78e780fd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the mean for Academic Pressure for Females is 3.18'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_avg('Female', 'Academic Pressure')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "ba041c7f-475a-4706-9728-b5752ce2dfdc",
    "metadata": {},
    "outputs": [
@@ -879,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "6d517340-d829-4c12-8a8b-4e533cf91eb8",
    "metadata": {},
    "outputs": [
@@ -910,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "503eb205-51d6-45f9-ba84-2ab40345e01c",
    "metadata": {},
    "outputs": [
@@ -941,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "521a0b37-61b9-4f6f-9fe4-555202901d55",
    "metadata": {},
    "outputs": [
@@ -971,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "5b041ac0-09d1-450b-8853-895afe911b5e",
    "metadata": {},
    "outputs": [
