--- a/predicting_student_depression.ipynb
+++ b/predicting_student_depression.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "c11a61d0-ad38-4dac-9e05-7641d7ce871e",
    "metadata": {},
    "outputs": [
@@ -140,10 +140,10 @@
        "      <th>Sleep Duration</th>\n",
        "      <th>Dietary Habits</th>\n",
        "      <th>Degree</th>\n",
-       "      <th>Have you ever had suicidal thoughts ?</th>\n",
+       "      <th>Suicidal Thoughts</th>\n",
        "      <th>Work/Study Hours</th>\n",
        "      <th>Financial Stress</th>\n",
-       "      <th>Family History of Mental Illness</th>\n",
+       "      <th>Family Illness</th>\n",
        "      <th>Depression</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -226,23 +226,18 @@
        "1            0.0  5.90                 5.0               0.0   \n",
        "2            0.0  7.03                 5.0               0.0   \n",
        "\n",
-       "      Sleep Duration Dietary Habits   Degree  \\\n",
-       "0          5-6 hours        Healthy  B.Pharm   \n",
-       "1          5-6 hours       Moderate      BSc   \n",
-       "2  Less than 5 hours        Healthy       BA   \n",
+       "      Sleep Duration Dietary Habits   Degree Suicidal Thoughts  \\\n",
+       "0          5-6 hours        Healthy  B.Pharm               Yes   \n",
+       "1          5-6 hours       Moderate      BSc                No   \n",
+       "2  Less than 5 hours        Healthy       BA                No   \n",
        "\n",
-       "  Have you ever had suicidal thoughts ?  Work/Study Hours  Financial Stress  \\\n",
-       "0                                   Yes               3.0               1.0   \n",
-       "1                                    No               3.0               2.0   \n",
-       "2                                    No               9.0               1.0   \n",
-       "\n",
-       "  Family History of Mental Illness  Depression  \n",
-       "0                               No           1  \n",
-       "1                              Yes           0  \n",
-       "2                              Yes           0  "
+       "   Work/Study Hours  Financial Stress Family Illness  Depression  \n",
+       "0               3.0               1.0             No           1  \n",
+       "1               3.0               2.0            Yes           0  \n",
+       "2               9.0               1.0            Yes           0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "b43232c4-6150-494b-b1eb-0e3d29bf38be",
    "metadata": {},
    "outputs": [],
@@ -608,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6e88a2bd-6b18-4d4e-acaa-c67ab2187ebe",
    "metadata": {},
    "outputs": [
@@ -793,7 +788,7 @@
        "4               1.0               1.0             No           0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "14a21a26-ad4f-4e0b-b585-3848547d4e69",
    "metadata": {},
    "outputs": [
@@ -832,7 +827,7 @@
     "\n",
     "sns.countplot(data = df, x = 'Gender', hue = 'Academic Pressure')\n",
     "\n",
-    "ax.set_title('Academic Presure per Gender')\n",
+    "ax.set_title('Academic Pressure per Gender')\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "\n",
     "ax.get_yaxis().set_major_formatter(\n",
@@ -842,11 +837,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4a7ba05c-1bc5-4c1b-be6e-3a2d1830a4ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "male_df = df[df['Gender'] == 'Male'].copy()\n",
+    "\n",
+    "male_col = male_df['Academic Pressure'].value_counts().sort_index()\n",
+    "\n",
+    "dict = {}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "09ff7445-f520-49e2-a9b7-4c5f1c534b1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0.0: 3, 1.0: 2750, 2.0: 2329, 3.0: 4218, 4.0: 2816, 5.0: 3393}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_2 = {}\n",
+    "for ind, val in male_col.items():\n",
+    "    dict_2[ind] = val\n",
+    "dict_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "388b1ee2-720b-4c9a-ad77-64223689aada",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def percent_compare(col):\n",
+    "\n",
+    "    male_df = df[df['Gender'] == 'Male']\n",
+    "    fmale_df = df[df['Gender'] == 'Female']\n",
+    "\n",
+    "    male_col = male_df[col].value_counts().sort_index()\n",
+    "    fmale_col = fmale_df[col].value_counts().sort_index()\n",
+    "\n",
+    "    dict_male = {}\n",
+    "\n",
+    "    for ind, val in male_col.items():\n",
+    "        dict_male[ind] = val\n",
+    "\n",
+    "    dict_fmale = {}\n",
+    "\n",
+    "    for ind,val in fmale_col.items():\n",
+    "        dict_fmale[ind] = val\n",
+    "\n",
+    "    keys_list_m = list(dict_male.keys())\n",
+    "    val_list_m = list(dict_male.values())\n",
+    "\n",
+    "    keys_list_f = list(dict_fmale.keys())\n",
+    "    val_list_f = list(dict_fmale.values())\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    return f'males have a total of {val_list_m[0]} for {keys_list_m[0]}, while females have a total of {val_list_f[0]}. \\nmales have a total of {val_list_m[1]} for {keys_list_m[1]}, while females have a total of {val_list_f[1]}. \\nmales have a total of {val_list_m[2]} for {keys_list_m[2]}, while females have a total of {val_list_f[3]}. \\nmales have a total of {val_list_m[4]} for {keys_list_m[4]}, while females have a total of {val_list_f[4]}. \\nmales have a total of {val_list_m[5]} for {keys_list_m[5]}, while females have a total of {val_list_f[5]}.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "9b24a951-32c1-40c2-90cf-4b25862fd1bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "males have a total of 3 for 0.0, while females have a total of 4. \n",
+      "males have a total of 2750 for 1.0, while females have a total of 2037. \n",
+      "males have a total of 2329 for 2.0, while females have a total of 3220. \n",
+      "males have a total of 2816 for 4.0, while females have a total of 2330. \n",
+      "males have a total of 3393 for 5.0, while females have a total of 2878.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(percent_compare('Academic Pressure'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "126c455a-5ac9-4b08-9f94-b10b70ef3dbf",
    "metadata": {},
    "source": [
-    "Here we can see that males have more reports then the females, however this results in a similar mean when averaged out, resulting in females having a 0.07 higher averaage academic pressure rating."
+    "Here we can see that males have more reports then the females, however this results in a similar mean when averaged out, resulting in females having a 0.07 higher average academic pressure rating."
    ]
   },
   {
@@ -861,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "073d7abf-1046-4dcf-abf8-57c63a4bdf72",
    "metadata": {},
    "outputs": [
@@ -871,7 +963,7 @@
        "'the mean for Academic Pressure for Males is 3.11'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "af6024ab-91e0-4d5d-a46e-3dd78e780fd5",
    "metadata": {},
    "outputs": [
@@ -892,7 +984,7 @@
        "'the mean for Academic Pressure for Females is 3.18'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +995,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
+   "id": "c5541fc2-4b07-4c28-8c55-c6ce1d649a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def avg_across_genders(col):\n",
+    "    male_df = df[df['Gender'] == 'Male']\n",
+    "    fmale_df = df[df['Gender'] == 'Female']\n",
+    "\n",
+    "    male_col = male_df[col]\n",
+    "    fmale_col = fmale_df[col]\n",
+    "\n",
+    "    male_sum = sum(male_col)\n",
+    "    male_len = len(male_col)\n",
+    "    male_avg = round((male_sum / male_len), 2)\n",
+    "\n",
+    "    fmale_sum = sum(fmale_col)\n",
+    "    fmale_len = len(fmale_col)\n",
+    "    fmale_avg = round((fmale_sum / fmale_len), 2)\n",
+    "\n",
+    "    if male_avg > fmale_avg:\n",
+    "        number_above = male_avg\n",
+    "        number_below = fmale_avg\n",
+    "    elif male_avg < fmale_avg:\n",
+    "        number_above = fmale_avg\n",
+    "        number_below = male_avg\n",
+    "    else:\n",
+    "        number_above = 0\n",
+    "        number_below = 0\n",
+    "    \n",
+    "    avg = ((number_above - number_below) / ((number_above + number_below) / 2) * 100)\n",
+    "\n",
+    "    return avg\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b09b23d0-5056-46d2-9495-465562f52d27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.225755166931646"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_across_genders('Academic Pressure')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7dae7def-84af-4fac-b321-2af97d0b62fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          Male\n",
+       "1        Female\n",
+       "2          Male\n",
+       "3        Female\n",
+       "4        Female\n",
+       "          ...  \n",
+       "27896    Female\n",
+       "27897      Male\n",
+       "27898      Male\n",
+       "27899    Female\n",
+       "27900      Male\n",
+       "Name: Gender, Length: 27821, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Gender']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38fb0956-f6d6-46e9-aeaa-29f2d1d94159",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "ba041c7f-475a-4706-9728-b5752ce2dfdc",
    "metadata": {},
    "outputs": [
@@ -934,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "6d517340-d829-4c12-8a8b-4e533cf91eb8",
    "metadata": {},
    "outputs": [
@@ -965,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "503eb205-51d6-45f9-ba84-2ab40345e01c",
    "metadata": {},
    "outputs": [
@@ -996,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "521a0b37-61b9-4f6f-9fe4-555202901d55",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "5b041ac0-09d1-450b-8853-895afe911b5e",
    "metadata": {},
    "outputs": [
